Fix: Fix SonarQube Code Smells for Ueims_BE