@@ -6,7 +6,6 @@ import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -15,8 +14,6 @@ import com.ueims.exception.AppException;
 import com.ueims.exception.ErrorCode;
 import com.ueims.model.dto.dashboard.ChartDataDTO;
 import com.ueims.model.dto.dashboard.CommandCenterSummaryDTO;
-import com.ueims.model.entity.Enterprise;
-import com.ueims.model.entity.Incident;
 import com.ueims.model.entity.SemesterStatistics;
 import com.ueims.model.entity.WeeklyReport;
 import com.ueims.repository.ApplicationRepository;
@@ -40,6 +37,8 @@ import lombok.experimental.FieldDefaults;
 @Transactional(readOnly = true)
 public class DashboardServiceImpl implements DashboardService {
 
+    private static final String UNKNOWN_TEXT = "Unknown";
+
     SemesterStatisticsRepository semesterStatisticsRepository;
     EligibleStudentRepository eligibleStudentRepository;
     FinalGradeRepository finalGradeRepository;
@@ -50,15 +49,9 @@ public class DashboardServiceImpl implements DashboardService {
     InterviewRepository interviewRepository;
     EnterpriseAssignmentRepository enterpriseAssignmentRepository;
 
-    @Override
-    public CommandCenterSummaryDTO getCommandCenterSummary() {
-        // 1. Pending Enterprises
-        List<Enterprise> allEnterprises = enterpriseRepository.findAll();
-        List<Enterprise> pendingEnterprises = allEnterprises.stream()
+    private List<CommandCenterSummaryDTO.PendingEnterpriseSummary> getPendingEnterpriseSummaries() {
+        return enterpriseRepository.findAll().stream()
                 .filter(e -> "PENDING".equalsIgnoreCase(e.getStatus()))
-                .collect(Collectors.toList());
-
-        List<CommandCenterSummaryDTO.PendingEnterpriseSummary> pendingSummaries = pendingEnterprises.stream()
                 .map(e -> {
                     long daysWaiting = e.getCreatedAt() != null
                             ? ChronoUnit.DAYS.between(e.getCreatedAt(), LocalDateTime.now())
@@ -70,28 +63,25 @@ public class DashboardServiceImpl implements DashboardService {
                             .sector(e.getIndustry())
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
+    }
 
-        // 2. Incidents
-        List<Incident> allIncidents = incidentRepository.findAll();
-        List<Incident> activeIncidents = allIncidents.stream()
+    private List<CommandCenterSummaryDTO.IncidentSummary> getActiveIncidentSummaries() {
+        return incidentRepository.findAll().stream()
                 .filter(i -> "OPEN".equalsIgnoreCase(i.getStatus()) || "IN_PROGRESS".equalsIgnoreCase(i.getStatus()))
-                .collect(Collectors.toList());
-
-        List<CommandCenterSummaryDTO.IncidentSummary> incidentSummaries = activeIncidents.stream()
                 .map(i -> {
                     long daysAgo = i.getCreatedAt() != null
                             ? ChronoUnit.DAYS.between(i.getCreatedAt(), LocalDateTime.now())
                             : 0;
                     String studentName =
-                            i.getReportedBy() != null ? i.getReportedBy().getFullName() : "Unknown";
+                            i.getReportedBy() != null ? i.getReportedBy().getFullName() : UNKNOWN_TEXT;
                     String studentId = i.getReportedBy() != null
                             ? i.getReportedBy().getUserId().toString()
-                            : "Unknown";
+                            : UNKNOWN_TEXT;
                     String enterpriseName =
                             (i.getAssignment() != null && i.getAssignment().getEnterprise() != null)
                                     ? i.getAssignment().getEnterprise().getCompanyName()
-                                    : "Unknown";
+                                    : UNKNOWN_TEXT;
 
                     return CommandCenterSummaryDTO.IncidentSummary.builder()
                             .id(i.getIncidentId())
@@ -103,24 +93,15 @@ public class DashboardServiceImpl implements DashboardService {
                             .daysAgo((int) daysAgo)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
+    }
 
-        // 3. Pipeline
-        long eligibleCount = eligibleStudentRepository.count();
-        long appliedCount = applicationRepository.count();
-        long interviewedCount = interviewRepository.count();
-        long placedCount = enterpriseAssignmentRepository.count();
-
-        CommandCenterSummaryDTO.PipelineSummary pipelineSummary = CommandCenterSummaryDTO.PipelineSummary.builder()
-                .eligible((int) eligibleCount)
-                .applied((int) appliedCount)
-                .interviewed((int) interviewedCount)
-                .placed((int) placedCount)
-                .build();
-
-        // 4. Weekly Reports
+    private CommandCenterSummaryDTO.WeeklyReportSummary getWeeklyReportSummary() {
         List<WeeklyReport> allReports = weeklyReportRepository.findAll();
-        int submitted = 0, pending = 0, late = 0, notStarted = 0;
+        int submitted = 0;
+        int pending = 0;
+        int late = 0;
+        int notStarted = 0;
         List<CommandCenterSummaryDTO.LateStudentSummary> lateStudents = new ArrayList<>();
 
         for (WeeklyReport r : allReports) {
@@ -136,22 +117,41 @@ public class DashboardServiceImpl implements DashboardService {
                         .name(
                                 r.getAssignment() != null && r.getAssignment().getStudent() != null
                                         ? r.getAssignment().getStudent().getFullName()
-                                        : "Unknown")
+                                        : UNKNOWN_TEXT)
                         .daysOverdue((int) Math.max(0, daysOverdue))
                         .status("LATE")
                         .build());
             } else notStarted++;
         }
 
-        CommandCenterSummaryDTO.WeeklyReportSummary reportSummary =
-                CommandCenterSummaryDTO.WeeklyReportSummary.builder()
-                        .week(1) // Default or calculate from current date
-                        .submitted(submitted)
-                        .pending(pending)
-                        .late(late)
-                        .notStarted(notStarted)
-                        .students(lateStudents)
-                        .build();
+        return CommandCenterSummaryDTO.WeeklyReportSummary.builder()
+                .week(1) // Default or calculate from current date
+                .submitted(submitted)
+                .pending(pending)
+                .late(late)
+                .notStarted(notStarted)
+                .students(lateStudents)
+                .build();
+    }
+
+    @Override
+    public CommandCenterSummaryDTO getCommandCenterSummary() {
+        List<CommandCenterSummaryDTO.PendingEnterpriseSummary> pendingSummaries = getPendingEnterpriseSummaries();
+        List<CommandCenterSummaryDTO.IncidentSummary> incidentSummaries = getActiveIncidentSummaries();
+        CommandCenterSummaryDTO.WeeklyReportSummary reportSummary = getWeeklyReportSummary();
+
+        // 3. Pipeline
+        long eligibleCount = eligibleStudentRepository.count();
+        long appliedCount = applicationRepository.count();
+        long interviewedCount = interviewRepository.count();
+        long placedCount = enterpriseAssignmentRepository.count();
+
+        CommandCenterSummaryDTO.PipelineSummary pipelineSummary = CommandCenterSummaryDTO.PipelineSummary.builder()
+                .eligible((int) eligibleCount)
+                .applied((int) appliedCount)
+                .interviewed((int) interviewedCount)
+                .placed((int) placedCount)
+                .build();
 
         return CommandCenterSummaryDTO.builder()
                 .activeIncidents(incidentSummaries)
